--- a/src/HUD/Radar/radar.scss
+++ b/src/HUD/Radar/radar.scss
@@ -5,6 +5,7 @@
 	border: none;
 	background-color: rgba(0,0,0,0.5);
 	transition: all 1s;
+	border-bottom-right-radius: 12px;
 	.map-container {
 		transition: all 1s;
 	}
