--- a/src/HUD/Radar/LexoRadar/index.css
+++ b/src/HUD/Radar/LexoRadar/index.css
@@ -1,6 +1,6 @@
 html, body, .map-container {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     margin: 0;
 }
 
@@ -11,9 +11,10 @@ html, body, .map-container {
     }
     100% {
         box-shadow: 0 0 0 50px rgba(0, 0, 0, 0.8);
-        opacity:0;
+        opacity: 0;
     }
 }
+
 @keyframes BombPlanted {
     0% {
         box-shadow: 0 0 0 0 rgba(185, 5, 5, 0.8);
@@ -22,6 +23,7 @@ html, body, .map-container {
         box-shadow: 0 0 0 50px rgba(185, 5, 5, 0);
     }
 }
+
 @keyframes BombExploded {
     0% {
         box-shadow: 0 0 0 0 rgba(185, 5, 5, 0.8);
@@ -30,6 +32,7 @@ html, body, .map-container {
         box-shadow: 0 0 0 150px rgba(185, 5, 5, 0);
     }
 }
+
 @keyframes BombDefused {
     0% {
         box-shadow: 0 0 0 0 rgba(5, 185, 5, 0.8);
@@ -38,27 +41,30 @@ html, body, .map-container {
         box-shadow: 0 0 0 150px rgba(5, 185, 5, 0);
     }
 }
+
 .map-container {
     position: relative;
 }
 
 .map-container .map {
-    width:1024px;
+    width: 1024px;
     height: 1024px;
     position: relative;
     transform: scale(1);
     transition: all 0.5s;
 }
+
 .map .player, .map .grenade, .map .bomb {
     position: absolute;
-    height:30px;
-    width:30px;
+    height: 30px;
+    width: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: opacity 0.5s ease;
     /*transition: all 0.1s ease;/**/
 }
+
 .map .player .background {
     /*background-color:white;*/
     /*clip-path: polygon(0 0, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0 0);*/
@@ -66,20 +72,22 @@ html, body, .map-container {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    transition:transform 0.2s ease;
+    transition: transform 0.2s ease;
 }
+
 .map .player .background-fire {
     position: absolute;
-    width:200%;
-    height:200%;
+    width: 200%;
+    height: 200%;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition:transform 0.2s ease;
+    transition: transform 0.2s ease;
     /*background-color:white;*/
     /*clip-path: polygon(0 0, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0 0);*/
 
 }
+
 @keyframes Blink {
     from {
         opacity: 0;
@@ -88,9 +96,10 @@ html, body, .map-container {
         opacity: 1;
     }
 }
+
 .map .player .background-fire .bg {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     background-image: url('./assets/shootFire.png');
     background-position: center;
     background-size: contain;
@@ -101,18 +110,21 @@ html, body, .map-container {
     animation-duration: 0.25s;
     animation-iteration-count: infinite;
 }
+
 .map .player.dead {
     opacity: 0.2;
     z-index: 1;
 }
+
 .map .player {
-    transition:transform 0.1s ease, opacity 1s;
+    transition: transform 0.1s ease, opacity 1s;
     image-rendering: -moz-crisp-edges; /* Firefox */
     image-rendering: -o-crisp-edges; /* Opera */
     image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
     image-rendering: crisp-edges;
     -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
 }
+
 .map .player:not(.dead) {
     z-index: 2;
 }
@@ -120,12 +132,14 @@ html, body, .map-container {
 .map .player.flashed.CT:not(.dead) .label {
     background: rgb(159 197 255);
 }
+
 .map .player.flashed.T:not(.dead) .label {
     background: rgb(255 219 165);
 }
+
 .map .player.active .background {
-    width:120%;
-    height:120%;
+    width: 120%;
+    height: 120%;
 }
 
 /*
@@ -140,52 +154,62 @@ html, body, .map-container {
 }
 */
 .map .player.active {
-    width:120%;
-    height:120%;
+    width: 120%;
+    height: 120%;
     z-index: 3;
 }
+
 .map .grenade .background {
-    border-radius:50%;
+    border-radius: 50%;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    opacity:1;
+    opacity: 1;
     transition: opacity 0.25s;
 }
+
 .map .grenade.smoke .background {
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     opacity: 1;
     transition: opacity 1s;
 }
+
 .map .grenade.smoke {
     transition: all 0.5s;
 }
+
 .map .grenade.smoke.inair .background {
     background-color: transparent !important;
     border: none !important;
     background-image: url('./grenades/smoke.png');
     filter: invert(1);
 }
+
 .map .grenade.smoke.exploded .background {
     opacity: 0;
 }
+
 .map .grenade.flashbang, .map .grenade.frag {
     filter: invert(1);
 }
+
 .map .grenade.flashbang .background {
     background-image: url('./grenades/flash.png');
     background-color: transparent;
 }
+
 .map .grenade.frag .background {
     background-image: url('./grenades/frag.png');
     background-color: transparent;
 }
+
 .map .grenade .explode-point, .map .bomb .explode-point {
     position: absolute;
     width: 2px;
     height: 2px;
     border-radius: 0.08px;
 }
+
 .map .grenade.flashbang.exploded .explode-point, .map .grenade.frag.exploded .explode-point {
     animation: FlashOrFragDeployed 0.25s 1 forwards;
 }
@@ -193,40 +217,48 @@ html, body, .map-container {
 .map .grenade.flashbang.exploded .background, .map .grenade.frag.exploded .background {
     opacity: 0;
 }
+
 .map .grenade.smoke .background {
     border: 5px solid grey;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
 }
+
 .map .grenade.smoke.CT .background {
     border: 5px solid var(--color-new-ct);
-    background-color: rgba(255, 255, 255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
 }
+
 .map .grenade.smoke.T .background {
     border: 5px solid var(--color-new-t);
-    background-color: rgba(255, 255, 255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
 }
+
 .map .grenade.firebomb .background {
-    background-color:transparent;
+    background-color: transparent;
     background-image: url('./grenades/firebomb.png');
     filter: invert(1);
 }
+
 .map .grenade.inferno {
-    width:12px;
-    height:12px;
+    width: 12px;
+    height: 12px;
 }
+
 .map .grenade.smoke {
-    width:60px;
-    height:60px;
+    width: 60px;
+    height: 60px;
 }
+
 .map .grenade.inferno .background {
     background-color: red;
     opacity: 0.5;
     border: 2px solid orange;
 }
-.map .player .background, .map .player .label,.map .grenade .background, .map .bomb .background {
+
+.map .player .background, .map .player .label, .map .grenade .background, .map .bomb .background {
     position: absolute;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -238,35 +270,47 @@ html, body, .map-container {
     border-radius: 50%;
     -webkit-font-smoothing: crisp-edges;
     font-size: 37px;
-    text-shadow: 4px 4px 0 black;
+    text-shadow: 1px 1px 2px rgba(9, 60, 114, 0.2);
 }
+
 .map .bomb {
-    transition:transform 0.1s ease;
+    transition: transform 0.1s ease;
 }
+
 .map .bomb .background {
     background-image: url('./grenades/bomb.png');
     background-size: 66%;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius:50%;
+    border-radius: 50%;
 }
+
 .map .bomb.planted .explode-point, .map .bomb.defusing .explode-point {
     animation: BombPlanted 2s infinite;
 }
+
 .map .bomb.exploded .explode-point {
     animation: BombExploded 2s 1 forwards;
 }
+
 .map .bomb.defused .explode-point {
     animation: BombDefused 2s 1 forwards;
 }
+
 .map .player.CT .label {
-    background: rgb(16, 88, 197)
+    background: #00A3FF;
 }
+
+.map .player.active.CT .label {
+    background: linear-gradient(335.27deg, #0075FF 20.01%, #00A3FF 82.15%);
+}
+
 .map .player.T .label {
-    background: rgb(255, 153, 0);
+    background: #FFC000;
 }
-.map .player.T.hasBomb .label {
-    background: red;
+
+.map .player.active.T .label {
+    background: linear-gradient(325.76deg, #FF4B00 -17.12%, #FFC000 83.25%);
 }
 
 @keyframes Hidden {
@@ -276,9 +320,10 @@ html, body, .map-container {
         display: none !important;
     }
 }
+
 .map .hidden {
     opacity: 0;
     animation: Hidden 1s ease 1s 1;
-    animation-fill-mode: forwards;/**/
+    animation-fill-mode: forwards; /**/
 
 }
