--- a/src/HUD/Radar/radar.scss
+++ b/src/HUD/Radar/radar.scss
@@ -25,7 +25,7 @@
   transform-style: preserve-3d;
   left: 50%;
   top: 100px;
-  border-bottom-right-radius: 0;
+  border-radius: 24px;
 
   .map {
     perspective: 500px;
