--- a/src/HUD/Players/observed.scss
+++ b/src/HUD/Players/observed.scss
@@ -48,12 +48,8 @@
     }
 
     .weapon.grenade {
-      height: 28px;
-      /*filter: invert(1);*/
-
-      &:last-child {
-        margin-right: 5px;
-      }
+      height: auto;
+      width: 28px;
     }
 
     .ammo {
@@ -104,8 +100,23 @@
       height: 100%;
       display: flex;
       align-items: center;
-      flex-basis: 175px;
+      //flex-basis: 175px;
+      justify-content: flex-start;
+      padding-left: 22px;
+    }
+
+    .armor_indicator, .defuse_indicator {
+      display: flex;
+      align-items: center;
       justify-content: center;
+      padding-left: 10px;
+      padding-right: 10px;
+
+      svg {
+        fill: var(--white-full);
+        height: 28px;
+        width: auto;
+      }
     }
   }
 
