--- a/src/HUD/Logo/Logo.scss
+++ b/src/HUD/Logo/Logo.scss
@@ -1,9 +1,17 @@
 .tournament_logo {
   position: fixed;
-  right: 10px;
-  top: 0;
+  left: 10px;
+  top: 350px;
+  width: 350px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   img {
     display: block;
+    width: auto;
+    height: 100%;
+    object-fit: cover;
   }
 }
