--- a/src/HUD/MatchBar/matchbar.scss
+++ b/src/HUD/MatchBar/matchbar.scss
@@ -173,7 +173,8 @@
   }
 
   .team {
-    width: 426px;
+    width: 100%;
+    max-width: 377px;
     display: flex;
     align-items: center;
     background-repeat: no-repeat;
@@ -182,8 +183,8 @@
     .logo {
       display: flex;
       flex-direction: row;
-      width: 105px;
-      height: 100%;
+      width: 60px;
+      height: 60px;
       align-items: center;
       overflow: hidden;
 
@@ -194,7 +195,7 @@
     }
 
     &.left {
-      justify-content: center;
+      justify-content: flex-end;
       flex-direction: row-reverse;
       border-bottom-left-radius: 12px;
       background-position: 0 0;
@@ -222,7 +223,7 @@
     }
 
     &.right {
-      justify-content: center;
+      justify-content: flex-end;
       flex-direction: row;
       border-bottom-right-radius: 12px;
       background-position: 50px 0;
@@ -252,7 +253,8 @@
 
   .team-name {
     display: flex;
-    width: 360px;
+    max-width: 300px;
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -287,6 +289,11 @@
     font-weight: 600;
     font-size: 36px;
     color: var(--white-full);
+    margin-right: auto;
+    &.right {
+      margin-left: auto;
+      margin-right: 0;
+    }
   }
 
   .bar {
