--- a/src/HUD/SideBoxes/sideboxes.scss
+++ b/src/HUD/SideBoxes/sideboxes.scss
@@ -41,7 +41,7 @@
 	flex-direction: row;
 	opacity: 1;
 	transition: all 0.75s;
-	background-color: var(--sub-panel-color);
+	background: rgba(39, 39, 39, 0.8);
 	margin-bottom: 4px;
 	margin-top: 4px;
 	align-items: center;
@@ -78,7 +78,7 @@
 	flex-direction: row;
 	opacity: 1;
 	transition: all 0.75s;
-	background-color: var(--sub-panel-color);
+	background: rgba(39, 39, 39, 0.8);
 	margin-bottom: 4px;
 	margin-top: 4px;
 	flex-direction: column;
@@ -127,7 +127,7 @@
 	flex-direction: row;
 	opacity: 1;
 	transition: all 0.75s;
-	background-color: var(--sub-panel-color);
+	background: rgba(39, 39, 39, 0.8);
 	margin-bottom: 4px;
 	margin-top: 4px;
 	font-weight: 600;
