--- a/src/HUD/MatchBar/matchbar.scss
+++ b/src/HUD/MatchBar/matchbar.scss
@@ -24,7 +24,7 @@
   justify-content: space-between;
   width: 1148px;
   height: 72px;
-  top: 10px;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
   background: linear-gradient(90deg, rgba(39, 39, 39, 0.8) 20.81%, #272727 37.98%, #272727 61.82%, rgba(39, 39, 39, 0.8) 79.26%);
@@ -463,7 +463,7 @@
 }
 
 #series_container {
-  display: flex;
+  display: none;
   flex-direction: row;
   width: 126px;
   height: 15px;
