--- a/src/HUD/Players/observed.scss
+++ b/src/HUD/Players/observed.scss
@@ -100,7 +100,6 @@
       height: 100%;
       display: flex;
       align-items: center;
-      //flex-basis: 175px;
       justify-content: flex-start;
       padding-left: 22px;
     }
@@ -207,15 +206,23 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    position: relative;
-    flex-grow: 1;
     height: 175px;
+    width: 175px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     pointer-events: none;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 
     img {
+      display: block;
+      max-height: 170px;
+      max-width: 170px;
+      object-fit: contain;
+
     }
   }
 
