--- a/src/HUD/SideBoxes/sideboxes.scss
+++ b/src/HUD/SideBoxes/sideboxes.scss
@@ -3,10 +3,10 @@
 	bottom: 384px;
 }
 .boxes.left {
-	left: 10px;
+	left: 20px;
 }
 .boxes.right {
-	right: 10px;
+	right: 20px;
 }
 .boxes.hide {
 	.utilitybox {
@@ -38,6 +38,7 @@
 	width: 415px;
 	height: 70px;
 	display: flex;
+	display: none;
 	flex-direction: row;
 	opacity: 1;
 	transition: all 0.75s;
