--- a/src/HUD/MapSeries/mapseries.scss
+++ b/src/HUD/MapSeries/mapseries.scss
@@ -14,10 +14,37 @@
 
   .veto_container {
     display: flex;
-    background-color: rgba(0, 0, 0, 0.8);
     color: white;
     align-items: center;
     height: 55px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+
+    &:before {
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(0deg, rgba(39, 39, 39, 0.6), rgba(39, 39, 39, 0.6));
+      z-index: 0;
+      content: '';
+    }
+
+    &__active {
+      &:before {
+        background: unset;
+      }
+    }
+
+    & > * {
+      position: relative;
+      z-index: 1;
+    }
+
 
     .col2 {
       background: rgba(255, 255, 255, 0.2);
